<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextSys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintSys"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintDia"
        android:inputType="textPersonName" />

<!--    <DatePicker-->
<!--        android:id="@+id/datePicker1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:calendarViewShown="false"-->
<!--        android:datePickerMode="spinner" />-->

<!--    <CheckBox-->
<!--        android:id="@+id/checkBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="CheckBox" />-->

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddEntry" />

    <Button
        android:id="@+id/buttonMonthlyReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCheckReport" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_list"
            android:layout_width="match_parent"
            android:layout_height="329dp" />

    </ScrollView>
</LinearLayout>